[project]
name = "lightsaber"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "circup>=2.1.1",
    "colorama>=0.4.6",
    "just-playback>=0.1.8",
    "wave>=0.0.2",
]

[dependency-groups]
dev = [
    "circuitpython-stubs>=9.2.4",
    "mypy>=1.14.1",
    "ruff>=0.9.4",
    "types-colorama>=0.4.15.20240311",
]
